# meditor

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  bootstrap.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-linux.yml  release-archlinux.yml  release-fedora.yml  release.yml
docs/: START_HERE.md
docs/design/: 08_pulse.md  (+11 more)
scripts/: build-changelog.sh  diagnose-semantic-index.sh  prepare-icon.sh  prepare-version.sh
src/: App.constituted-context.test.ts  App.cosmos.test.ts  App.favorites.test.ts  App.multi-pane.test.ts  App.second-brain-context.test.ts  App.settings.test.ts  App.shell-flows.test.ts  App.shell.contract.test.ts  App.theme.contract.test.ts  App.vue  main.ts  themeTypography.contract.test.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: BACKEND_INDEX_ARCHITECTURE.md  alter_exploration.rs  alters.rs  app_meta.rs  db.rs  docx_conversion.rs  echoes.rs  editor_sync.rs  favorites.rs  fs_ops.rs  index_schema.rs  lib.rs  main.rs  markdown_index.rs  note_history.rs  search_index.rs  semantic.rs  settings.rs  style_from_docx.rs  wikilink_graph.rs  workspace_paths.rs  workspace_watch.rs
src-tauri/src/docx/: conversion.rs  default_style.rs  style_from_docx.rs
src-tauri/src/second_brain/: SECOND_BRAIN_ARCHITECTURE.md  config.rs  context.rs  draft.rs  draft_publish.rs  frontmatter_generation.rs  llm.rs  message_flow.rs  mod.rs  model_discovery.rs  modes.rs  openai_codex.rs  paths.rs  prompt_builder.rs  pulse_flow.rs  session_store.rs
(+648 files in other folders)
