[package]
name = "md-localfirst"
version = "0.1.0"
description = "Local-first markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "md_localfirst"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.10", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"

