[package]
name = "meditor"
version = "0.1.4"
description = "Local-first markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "meditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"
rfd = "0.15"
open = "5"
